# cml

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  pages.yaml  release.yaml  tests.yaml
cml/: index.html
contributing/: index.html
docs/: cml.md  examples.md  index.md  kaneko.md  rulkov.md  visualization.md
docs/stylesheets/: extra.css
examples/: index.html
installation/: index.html
kaneko/: index.html
notebooks/: example.ipynb  vizs.ipynb
rulkov/: index.html
search/: search_index.json
src/cml/: __init__.py  cli.py  cml.py  kaneko.py  rulkov.py  viz.py
tests/ci/: ci_tests.py
tests/precommits/: precomit_tests.py  precommit_tests.py
visualization/: index.html
