[project]
name = "cml"
version = "0.1.0"
description = "An implementation of coupled map lattices."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
